Update Flask API
