# python/enthic/static/swagger.json
@@ -10,8 +10,7 @@
   },
   "host": "api.enthic.fr",
   "basePath": "/company",
-  "tags": [
-    {
+  "tags": [{
       "name": "Enthic",
       "description": "Swagger French Company Account and Ethical Score",
       "externalDocs": {
@@ -46,19 +45,19 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "siren",
-            "in": "path",
-            "description": "All company SIREN. A 9 numeric characters long number",
-            "required": true,
-            "type": "string",
-            "format": "string"
-          }
-        ],
+        "parameters": [{
+          "name": "siren",
+          "in": "path",
+          "description": "All company SIREN. A 9 numeric characters long number",
+          "required": true,
+          "type": "string"
+        }],
         "responses": {
           "200": {
-            "description": "Successful operation, JSON is returned, contain a error if SIREN format is wrong."
+            "description": "Successful operation, company information is returned in JSON"
+          },
+          "400": {
+            "description": "JSON is returned, contain a error value as error message."
           }
         },
         "x-swagger-router-controller": "swagger_server.controllers.siren_controller"
@@ -78,26 +77,23 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "denomination",
-            "in": "path",
-            "description": "An official company denomination.",
-            "required": true,
-            "type": "string",
-            "format": "string"
-          }
-        ],
+        "parameters": [{
+          "name": "denomination",
+          "in": "path",
+          "description": "An official company denomination.",
+          "required": true,
+          "type": "string"
+        }],
         "responses": {
           "200": {
-            "description": "Successful operation, JSON is returned."
+            "description": "Successful operation, company information is returned in JSON"
           }
         },
         "x-swagger-router-controller": "swagger_server.controllers.denomination_controller"
       }
     },
-    "/search/{probe}": {
-      "get": {
+    "/search": {
+      "post": {
         "tags": [
           "Search"
         ],
@@ -110,19 +106,32 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "probe",
-            "in": "path",
-            "description": "A partial company denomination or SIREN.",
-            "required": true,
-            "type": "string",
-            "format": "string"
+        "parameters": [{
+          "in": "body",
+          "name": "body",
+          "description": "Search for companies based on a probe",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "probe": {
+                "type": "string",
+                "example": "Mr Sylvester, The world Company"
+              },
+              "limit": {
+                "type": "integer",
+                "example": 33
+              }
+            }
           }
-        ],
+
+        }],
         "responses": {
           "200": {
             "description": "Successful operation, JSON is returned."
+          },
+          "400": {
+            "description": "JSON is returned, contain a error value as error message."
           }
         },
         "x-swagger-router-controller": "swagger_server.controllers.search_controller"
